# plast-library

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  PlastLibrary.doxyfile  README  README.md  appveyor.yml  doxygen.css
examples/: CMakeLists.txt  bank1.cpp  example1.cpp  example10.cpp  example11.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp
src/: CMakeLists.txt
src/database/api/: IAlphabet.hpp  IDatabaseQuickReader.hpp  ISequence.hpp  ISequenceBuilder.hpp  ISequenceCache.hpp  ISequenceDatabase.hpp  ISequenceIterator.hpp  IWord.hpp
src/database/impl/: AbstractSequenceIterator.cpp  AbstractSequenceIterator.hpp  AminoAcidDatabaseQuickReader.hpp  BasicSequenceBuilder.cpp  BasicSequenceBuilder.hpp  BlastdbAsn1HeaderDecoder.cpp  BlastdbAsn1HeaderDecoder.hpp  BlastdbDatabaseQuickReader.cpp  BlastdbDatabaseQuickReader.hpp  BlastdbFileIndexReader.cpp  BlastdbFileIndexReader.hpp  BlastdbSequenceIterator.cpp  BlastdbSequenceIterator.hpp  BufferedCachedSequenceDatabase.cpp  BufferedCachedSequenceDatabase.hpp  BufferedSequenceDatabase.cpp  BufferedSequenceDatabase.hpp  CachedSubDatabase.cpp  CachedSubDatabase.hpp  CompositeSequenceDatabase.cpp  CompositeSequenceDatabase.hpp  DatabaseUtility.hpp  DatabaseVisitorComment.hpp  DefaultAlphabet.cpp  FastaDatabaseQuickReader.cpp  FastaDatabaseQuickReader.hpp  FastaSequenceConditionalPureIteratorFactory.hpp  FastaSequenceIterator.cpp  FastaSequenceIterator.hpp  FastaSequenceOutput.cpp  FastaSequenceOutput.hpp  FastaSequencePureIterator.cpp  FastaSequencePureIterator.hpp  ReadingFrameSequenceDatabase.cpp  ReadingFrameSequenceDatabase.hpp  ReadingFrameSequenceIterator.cpp  ReadingFrameSequenceIterator.hpp  ReverseStrandSequenceIterator.cpp  ReverseStrandSequenceIterator.hpp  Sequence.cpp  (+6 more)
src/designpattern/api/: ICommand.hpp  IObserver.hpp  IProperty.hpp  Iterator.hpp  SmartPointer.hpp
src/designpattern/impl/: CommandDispatcher.cpp  CommandDispatcher.hpp  ConfigFileProperties.cpp  ConfigFileProperties.hpp  DirectoryIterator.cpp  DirectoryIterator.hpp  EventCatch.hpp  FileLineIterator.cpp  FileLineIterator.hpp  IteratorGet.hpp  ListIterator.hpp  Observer.cpp  Observer.hpp  ProductIterator.hpp  Property.cpp  Property.hpp  RangeIterator.hpp  SwitchTool.hpp  SystemCommand.cpp  SystemCommand.hpp  TokenizerIterator.cpp  TokenizerIterator.hpp  Vectorterator.hpp  WrapperIterator.cpp  WrapperIterator.hpp  XmlReader.cpp  XmlReader.hpp
src/doxygen/: howto.hpp  mainpage.hpp  todo.hpp
src/index/api/: IDatabaseIndex.hpp  IHitIterator.hpp  IOccurrenceIterator.hpp  ISeedMaskGenerator.hpp
src/index/impl/: AbstractDatabaseIndex.cpp  AbstractDatabaseIndex.hpp  AbstractHitIterator.cpp  AbstractHitIterator.hpp  DatabaseIndex.cpp  DatabaseIndex.hpp  DatabaseIndexHash.cpp  DatabaseIndexHash.hpp  DatabaseNucleotidIndex.cpp  DatabaseNucleotidIndex.hpp  DatabaseNucleotidIndexOptim.cpp  DatabaseNucleotidIndexOptim.hpp  FakeDatabaseNucleotideIndex.cpp  FakeDatabaseNucleotideIndex.hpp  SeedHitIterator.cpp  SeedHitIterator.hpp  SeedHitIteratorCached.cpp  SeedHitIteratorCached.hpp  SeedMaskGenerator.cpp  SeedMaskGenerator.hpp  retrievall.c  retrievall.h
src/launcher/core/: PlastCmd.cpp  PlastCmd.hpp  PlastOptionsParser.cpp  PlastOptionsParser.hpp
src/launcher/jni/: Helper.cpp  Helper.hpp  JniObsfucation.h  Wrapper.cpp  Wrapper.hpp  org_inria_genscale_dbscan_impl_plast_Hit.cpp  org_inria_genscale_dbscan_impl_plast_Hit.h  org_inria_genscale_dbscan_impl_plast_QueryResult.cpp  org_inria_genscale_dbscan_impl_plast_QueryResult.h  org_inria_genscale_dbscan_impl_plast_Request.cpp  org_inria_genscale_dbscan_impl_plast_Request.h  org_inria_genscale_dbscan_impl_plast_RequestController.cpp  org_inria_genscale_dbscan_impl_plast_RequestController.h  org_inria_genscale_dbscan_impl_plast_RequestManager.cpp  org_inria_genscale_dbscan_impl_plast_RequestManager.h  org_inria_genscale_dbscan_impl_plast_RequestResult.cpp  org_inria_genscale_dbscan_impl_plast_RequestResult.h
src/launcher/observers/: AbstractObserver.hpp  AbstractProgressionObserver.cpp  AbstractProgressionObserver.hpp  AlgoExecutionObserver.cpp  AlgoExecutionObserver.hpp  AlgoHitsResultObserver.cpp  AlgoHitsResultObserver.hpp  AlgoResultObserver.cpp  AlgoResultObserver.hpp  BargraphObserver.cpp  BargraphObserver.hpp  FileProgressionObserver.cpp  FileProgressionObserver.hpp
src/misc/api/: CompleteSubjectDatabaseStats.cpp  CompleteSubjectDatabaseStats.hpp  PLogger.hpp  PlastStrings.hpp  PlastStringsRepository.hpp  RangeTree.hpp  Vector.hpp  genwin.h  macros.hpp  obsfucation.h  types.hpp  version.hpp  version.hpp.in
src/misc/impl/: ObsfucatedString.cpp  ObsfucatedString.hpp  Option.hpp  OptionsParser.cpp  OptionsParser.hpp  PLogger.cpp  RangeTree.cpp  genwin.c  lnfac.pri  seg.c
src/os/api/: IFile.hpp  IMemory.hpp  IMemoryFile.hpp  IOsFactory.hpp  IResource.hpp  IThread.hpp  ITime.hpp
src/os/impl/: CommonOsImpl.hpp  DefaultOsFactory.cpp  DefaultOsFactory.hpp  LinuxFile.cpp  LinuxFile.hpp  LinuxMemory.cpp  LinuxMemory.hpp  LinuxMemoryFile.cpp  LinuxMemoryFile.hpp  LinuxThread.cpp  LinuxThread.hpp  LinuxTime.cpp  LinuxTime.hpp  MacOsFile.cpp  MacOsFile.hpp  MacOsMemory.cpp  MacOsMemory.hpp  MacOsMemoryFile.cpp  MacOsMemoryFile.hpp  MacOsThread.cpp  MacOsThread.hpp  MacOsTime.cpp  MacOsTime.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  TimeTools.hpp  WindowsFile.cpp  WindowsFile.hpp  WindowsMemory.cpp  WindowsMemory.hpp  WindowsMemoryFile.cpp  WindowsMemoryFile.hpp  WindowsThread.cpp  WindowsThread.hpp  WindowsTime.cpp  WindowsTime.hpp  ZlibFile.cpp  ZlibFile.hpp
src/pcre/: pcre.h  pcre_compile.c  pcre_exec.c  pcre_fullinfo.c  pcre_globals.c  pcre_internal.h  pcre_newline.c  pcre_study.c  pcre_tables.c
test/: CMakeLists.txt  runTest.sh
test/benchmark/: AlgoAnalysis1.cpp  CMakeLists.txt  bench1.cpp
test/db/: bug15696b.fa  bugs1.fa  query.fa  sapiens_1Mo.fa
test/slaves/: centos63-shell-provisioner.sh
test/unit/: CMakeLists.txt
tools/: CMakeLists.txt  FastaBlastComparaison.cpp  PlastCmd.cpp  makeplastdb.cpp  model.cpp
(+305 files in other folders)
